Work for #4113: implements styles for survey's progress. Implement styles for progress buttons container. Fix gap between survey's header and active page

--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -14,10 +14,10 @@
 .sd-title.sd-container-modern__title {
   display: flex;
   padding: calcSize(3);
-  border-bottom: 2px solid $primary;
   overflow: auto;
   font-family: $font-family;
   gap: calcSize(4);
+  box-shadow: 0px 2px 0px #19b394;
   .sd-logo__image {
     margin-top: calcSize(1);
   }
@@ -54,7 +54,6 @@
 .sd-root-modern:not(.svc-tab-designer) {
   .sd-container-modern__title {
     background-color: $background;
-    box-shadow: 0px 2px 0px #19b394;
   }
 }
 .sd-root-modern {
